osv v2.17.2 from Kiesraad
  * Downloaded from Kiesraad
  * windows -> unix line endings
  * converted tabs to 4 spaces